Revert "Reapply "Dark mode fixes""
This reverts commit 496b1234613ff2b73966d19ab67d5182fbd9632a.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -258,10 +258,6 @@ a {
   transition: color var(--transition-fast);
 }
 
-a:visited {
-  color: var(--color-primary);
-}
-
 a:hover {
   color: var(--color-primary-dark);
   text-decoration: underline;
